--- a/Checkers/Checkers.csproj
+++ b/Checkers/Checkers.csproj
@@ -25,4 +25,15 @@
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
         <PackageReference Include="Microsoft.Extensions.AI.Ollama" Version="9.3.0-preview.1.25161.3" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Views\Settings\SettingsView.axaml.cs">
+        <DependentUpon>SettingsView.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+      <Compile Update="Views\Game\GameView.axaml.cs">
+        <DependentUpon>GameView.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
 </Project>
